; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/extr_amd.c_set_dr_addr_mask.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/extr_amd.c_set_dr_addr_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@X86_FEATURE_BPEXT = common dso_local global i32 0, align 4
@MSR_F16H_DR0_ADDR_MASK = common dso_local global i32 0, align 4
@MSR_F16H_DR1_ADDR_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_dr_addr_mask(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @X86_FEATURE_BPEXT, align 4
  %6 = call i32 @boot_cpu_has(i32 %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  br label %23

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  switch i32 %10, label %22 [
    i32 0, label %11
    i32 1, label %15
    i32 2, label %15
    i32 3, label %15
  ]

11:                                               ; preds = %9
  %12 = load i32, i32* @MSR_F16H_DR0_ADDR_MASK, align 4
  %13 = load i64, i64* %3, align 8
  %14 = call i32 @wrmsr(i32 %12, i64 %13, i32 0)
  br label %23

15:                                               ; preds = %9, %9, %9
  %16 = load i32, i32* @MSR_F16H_DR1_ADDR_MASK, align 4
  %17 = sub nsw i32 %16, 1
  %18 = load i32, i32* %4, align 4
  %19 = add nsw i32 %17, %18
  %20 = load i64, i64* %3, align 8
  %21 = call i32 @wrmsr(i32 %19, i64 %20, i32 0)
  br label %23

22:                                               ; preds = %9
  br label %23

23:                                               ; preds = %8, %22, %15, %11
  ret void
}

declare dso_local i32 @boot_cpu_has(i32) #1

declare dso_local i32 @wrmsr(i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
